@@ -1,3 +1,12 @@
+2004-05-12  Thierry Bothorel <thierry_bo@users.sourceforge.net>
+
+	* INSTALL (1.34): + If MAIL_DOMAIN is used and username returned by
+	  mrbs contains extra strings appended like domain name
+	  ('username.domain'), need to provide this extra string so that it
+	  will be removed from the username.  - Fixed bug: if MAIL_BOOKER
+	  is enabled, previous booker was empty if MAIL_DETAILS was not
+	  set.
+
 2004-05-08  Thierry Bothorel <thierry_bo@users.sourceforge.net>
 
 	* INSTALL (1.33): + Enhancements to email support: added the option
